authul_macros/tests/errors/table/invalid_attr_punct.rs
#[authul_macros::authul_table(name +)]
struct Foo;

#[authul_macros::authul_table(name !=)]
struct Bar;

#[authul_macros::authul_table(name ==)]
struct Baz;

fn main() {
}
